--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ description:      I think therefore I am
 disqus_shortname: saidzsblog
 search:           true
 # Change url to your domain. Leave localhost server or blank when working locally.
-#url:              http://saidz.github.io
-url:              http://t:4000
+url:              http://saidz.github.io
+#url:              http://t:4000
 
 # Owner/author information
 owner:
