--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,10 @@ links:
     url: /cpp/
   - title: JS
     url: /js/
+  - title: LINUX
+    url: /linux/
+  - title: Articles
+    url: /articles/
   - title: other
     url: /other/
   - title: 新浪微博
