change site config

--- a/_config.yml
+++ b/_config.yml
@@ -53,8 +53,7 @@ links:
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    CN/Shanghai
 future:      true
-pygments:    highlighter
-#highlighter:    true
+highlighter:    true
 #markdown:    kramdown
 markdown:    rdiscount
 
